# YaSfMt

./: README.md
src/: CMakeLists.txt  YaSfMt.pro  main.cpp  resources.qrc
src/acquisition/: CameraCalibration.cpp  CameraCalibration.h
src/core/: CMakeLists.txt  Core.cpp  Core.h
src/gui/: CMakeLists.txt  CVWidget.cpp  CVWidget.h  Gui.cpp  Gui.h  MainWindow.cpp  MainWindow.h
src/pcnn/: CMakeLists.txt  Legion.cpp  Legion.h  Principal.cpp  Principal.h
src/pcnn/alcides/: Principal.cpp  Projeto.cpp
src/rsc/samples/: caneca.avi  caneca2.avi
src/utils/: CMakeLists.txt  InputSource.h  SfMStatus.h  SignalType.h  SystemStatus.h
src/video/: CMakeLists.txt  CameraVideoStream.cpp  CameraVideoStream.h  FileVideoStream.cpp  FileVideoStream.h  ROSVideoStream.cpp  ROSVideoStream.h  Video.cpp  Video.h  VideoStream.h
src/viewer/: main.cpp  pcl_visualizer.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui  ui_pclviewer.h
src/vision/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  FeatureMatcher.cpp  FeatureMatcher.h  FundamentalMatrix.cpp  FundamentalMatrix.h  LEGION.cpp  MotionDetector.cpp  MotionDetector.h  RobustMatcher.cpp  RobustMatcher.h  Triangulation.cpp  Triangulation.h  Vision.cpp  Vision.h
src/vision/ba/: BundleAdjuster.cpp  BundleAdjuster.h
src/vision/calibration/: CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  Settings.cpp  Settings.h
